2007-11-19  Sanel <karijes@users.sourceforge.net>

	* Replaced dnotify.m4 with notify.m4 where are (now) performed checks for
	inotify, dnotify and FAM presence
	* Replaced EDE_ with EDELIB_ in *.m4 and configure.in files

2007-11-13  Sanel <karijes@users.sourceforge.net>

	* Removed old sort() code from list, replacing with new (faster) one

2007-11-11  Sanel <karijes@users.sourceforge.net>

	* In list added sort() method, with tests
	* TODO entry
	* ICON_CONTEXT_EMBLEM added to IconTheme

2007-11-5  Sanel <karijes@users.sourceforge.net>

	* In Window added another way of updating data via external (from other
	programs) calls
	* test/strutil.cpp use list now

2007-10-31  Sanel <karijes@users.sourceforge.net>

	* XSETTINGS code in Window
	* puts/printf cleanup from XSettingsClient
	* manager_running() added to XSettingsClient
	* More checks in Window code

2007-10-29  Sanel <karijes@users.sourceforge.net>

	* xsettings_manager_delete_setting added in XSettingsCommon.cpp
	* Small docs for Window class
	* New settings property in Window class and fixed small color issues

2007-10-25  Sanel <karijes@users.sourceforge.net>

	* In XSettingsManager after set(), notify() must be called. This will
	(on initial startup) keep serials to zero which is compatible with
	XSETTINGS referent implementation
	* The same done for XSettingsClient
	* Window class added

2007-10-24  Sanel <karijes@users.sourceforge.net>

	* Documented XSettingsClient
	* Copy ctor and operator= are private in XSettingsClient
	* setup_driver() guarded with USE_SOUNDS
	* XSettingsManager added with documentation
	* XSettingsClient now explicitly accepts Display/screen variables

2007-10-23  Sanel <karijes@users.sourceforge.net>

	* xsettings_list_find in XSettingsCommon.h should accept XSettingsList*
	not XSettingsList**. Compiler missed this !@#$
	* Added xsettings.cpp file with tests

2007-10-22  Sanel <karijes@users.sourceforge.net>

	* Added XSETTINGS classes. Manager part missing