@@ -8,7 +8,7 @@ dnl This program is licenced under terms of the
 dnl GNU General Public Licence version 2 or newer.
 dnl See COPYING for details.
 
-dnl inotify checks
+dnl inotify checks (linux)
 AC_DEFUN([__INOTIFY_CHECK], [
 	AC_MSG_CHECKING([for inotify presence])
 
@@ -18,21 +18,19 @@ AC_DEFUN([__INOTIFY_CHECK], [
 		#include <sys/inotify.h>
 		#include <unistd.h>
 	],[
-		int fd = inotify_init();
-		close(fd);
+		inotify_init();
 	],[have_inotify=yes],[have_inotify=no])
 	AC_LANG_RESTORE
 
 	if eval "test $have_inotify = yes"; then
-		AC_DEFINE(HAVE_INOTIFY, 1, [Define to 1 if you want inotify support])
+		AC_DEFINE(HAVE_INOTIFY, 1, [Define to 1 if you have inotify support in the kernel (Linux only)])
 		AC_MSG_RESULT(yes)
 	else
 		AC_MSG_RESULT(no)
 	fi
-
 ])
 
-dnl dnotify checks
+dnl dnotify checks (linux)
 AC_DEFUN([__DNOTIFY_CHECK], [
 	AC_MSG_CHECKING([for dnotify presence])
 
@@ -56,7 +54,30 @@ AC_DEFUN([__DNOTIFY_CHECK], [
 	AC_LANG_RESTORE
 		
 	if eval "test $have_dnotify = yes"; then
-		AC_DEFINE(HAVE_DNOTIFY, 1, [Define to 1 if you want dnotify support])
+		AC_DEFINE(HAVE_DNOTIFY, 1, [Define to 1 if you have dnotify support in the kernel (Linux only)])
+		AC_MSG_RESULT(yes)
+	else
+		AC_MSG_RESULT(no)
+	fi
+])
+
+dnl kqueue (BSDs) checks
+AC_DEFUN([__KQUEUE_CHECK], [
+	AC_MSG_CHECKING([for kqueue presence])
+
+	AC_LANG_SAVE
+	AC_LANG_C
+	AC_TRY_COMPILE([
+		#include <sys/types.h>
+		#include <sys/event.h>
+		#include <sys/time.h>
+	],[
+		kqueue();
+	],[have_kqueue=yes],[have_kqueue=no])
+	AC_LANG_RESTORE
+
+	if eval "test $have_kqueue = yes"; then
+		AC_DEFINE(HAVE_KQUEUE, 1, [Define to 1 if you have kqueue support in the kernel (BSDs only)])
 		AC_MSG_RESULT(yes)
 	else
 		AC_MSG_RESULT(no)
@@ -77,7 +98,7 @@ AC_DEFUN([__FAM_CHECK], [
 	AC_LANG_RESTORE
 
 	if eval "test $have_fam = yes"; then
-		AC_DEFINE(HAVE_FAM, 1, [Define to 1 if you want FAM support])
+		AC_DEFINE(HAVE_FAM, 1, [Define to 1 if you have FAM installed])
 		AC_MSG_RESULT(yes)
 	else
 		AC_MSG_RESULT(no)
@@ -85,10 +106,11 @@ AC_DEFUN([__FAM_CHECK], [
 ])
 
 dnl Checks for the file system notification support.
-dnl First will be checked for inotify, then for dnotify and
-dnl at last for fam/gamin. kqueue is not yet implemented.
+dnl First will be checked for inotify, then for dnotify, then for kqueue (BSDs)
+dnl and at last for fam/gamin
 AC_DEFUN([EDELIB_NOTIFY], [
 	__INOTIFY_CHECK
 	__DNOTIFY_CHECK
+	__KQUEUE_CHECK
 	__FAM_CHECK
 ])
